# OpenGL-Pruebas

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  Debug.cpp  Debug.h  IndexBuffer.cpp  IndexBuffer.h  InputManager.cpp  InputManager.h  KeyCodes.h  Main.cpp  Material.h  MeshData.h  OpenGLPruebas.sln  OpenGLPruebas.vcxproj  OpenGLPruebas.vcxproj.filters  Pruebas.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Triangle.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  WindowManager.cpp  WindowManager.h  default.frag  default.vert  glad.c  logger.cpp  logger.h  texture.frag  texture.vert  (+3 more)
Libraries/include/glad/: glad.h
Libraries/lib/: glfw3.lib
OpenGLPruebas/x64/Debug/: OpenGLPruebas.exe.recipe  OpenGLPruebas.ilk  vc143.idb
OpenGLPruebas/x64/Debug/OpenGLPruebas.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  OpenGLPruebas.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
enc_temp_folder/f3aaad9770e69467ad891a666466516f/: Main.cpp
enc_temp_folder/f644fc2bf9cfaabf418488902e1db73/: Renderer.h
